# ConfigManageLib

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CACHING_IMPLEMENTATION.md  IMPROVEMENTS.md  INI_IMPLEMENTATION.md  LICENSE  MANIFEST.in  PRIORITY_IMPROVEMENTS.md  README.md  SECRETS_MANAGEMENT.md  YAML_IMPLEMENTATION.md  comprehensive_test.py  debug_toml.py  debug_toml_parsing.py  mypy.ini  override_config.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  security-requirements.txt  setup.py  test_basic_functionality.py  test_cache_enterprise.py  test_cache_integration.py  test_config.yaml  test_final_complete.py  test_final_verification.py  test_validation.py  test_yaml_support.py  tox.ini
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  maintenance.yml  python-app.yml  python-package-conda.yml
.test_cache/: .cache_metadata.json
config_manager/: __init__.py  cache.py  config_manager.py  profiles.py  schema.py  secrets.py  validation.py
config_manager/sources/: __init__.py  base.py  environment.py  ini_source.py  json_source.py  remote_source.py  secrets_source.py  toml_source.py  yaml_source.py
docs/: CACHING.md  REFACTORING_SUMMARY.md  SCHEMA_VALIDATION.md  SYSTEM_VERIFICATION.md  SYSTEM_VERIFICATION_REPORT.md
docs/dev/: CHANGELOG.md  CONTRIBUTING.md  PRIORITY_IMPROVEMENTS.md  PYTEST_MIGRATION_COMPLETE.md  TEST_COVERAGE_COMPLETE.md
examples/: advanced_usage.py  auto_reload_usage.py  basic_usage.py  cache_performance.py  ini_usage.py  profiles_usage.py  remote_usage.py  schema_validation.py  secrets_usage.py  toml_usage.py  yaml_usage.py
scripts/: simple_yaml.py
tests/: __init__.py  conftest.py  test_auto_reload.py  test_cache.py  test_cache_comprehensive.py  test_cache_simple.py  test_config_manager.py  test_config_manager_advanced.py  test_config_manager_advanced_comprehensive.py  test_config_manager_comprehensive.py  test_config_manager_methods.py  test_config_manager_profiles.py  test_config_manager_pytest.py  test_config_manager_schema.py  test_config_manager_utilities.py  test_environment_source_comprehensive.py  test_final_verification.py  test_ini_source.py  test_ini_source_comprehensive.py  test_integration.py  test_json_source_comprehensive.py  test_profiles.py  test_remote_source.py  test_schema.py  test_secrets_management.py  test_secrets_simple.py  test_simple_yaml.py  test_systems_verification.py  test_toml_source.py  test_toml_source_comprehensive.py  test_validation.py  test_validation_comprehensive.py  test_yaml_implementation.py  test_yaml_source.py  test_yaml_source_comprehensive.py
