[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configmanagelib"
version = "0.1.0"
description = "A modern, flexible, and type-safe configuration management library for Python"
readme = "README.md"
authors = [
    {name = "ConfigManageLib Team", email = "info@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/yourusername/configmanagelib"
"Bug Tracker" = "https://github.com/yourusername/configmanagelib/issues"
